<resources>
    <string name="app_name">Score Keeper</string>
    <string name="gryffindor">Gryffindor</string>
    <string name="slytherin">Slytherin</string>
    <string name="initial_score">0</string>
    <string name="quaffle">Quaffle</string>
    <string name="snitch">Snitch</string>
    <string name="reset">Reset</string>

    <string name="logo_image">Logo image</string>
    <string name="background_image">Background image</string>
</resources>
